# crysalis

./: Cargo.toml  LICENSE.md  deny.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.config/: spellcheck.toml
src/: interrupts.rs  lib.rs  main.rs  memory.rs  paging.rs  serial.rs  tests.rs  vga_outputs.rs
src/allocator/: fixed_size_block.rs  linked_list.rs  lock.rs  memory.rs  mod.rs
src/interrupts/: gdt.rs  mod.rs  pic.rs
src/io/: mod.rs
src/io/output/: mod.rs  serial.rs  vga.rs
src/tasks/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
